# korvex

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  _typos.toml  cliff.toml
.github/: CODEOWNERS  pull_request_template.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
crates/: README.md
crates/korvex/: Cargo.toml
crates/korvex-adapter/: Cargo.toml
crates/korvex-adapter/src/: lib.rs
crates/korvex-cli/: Cargo.toml
crates/korvex-cli/src/: lib.rs
crates/korvex-core/: Cargo.toml
crates/korvex-core/src/: lib.rs
crates/korvex-ffi/: Cargo.toml
crates/korvex-gen/: Cargo.toml
crates/korvex-macros/: Cargo.toml
crates/korvex-macros/src/: lib.rs
crates/korvex-node/: Cargo.toml
crates/korvex-node/src/: lib.rs
crates/korvex-python/: Cargo.toml
crates/korvex-python/src/: lib.rs
crates/korvex-types/: Cargo.toml
crates/korvex-types/src/: lib.rs
crates/korvex-wasi/: Cargo.toml
crates/korvex-wasi/src/: lib.rs
crates/korvex/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: flags.rs  main.rs
crates/xtask/src/tasks/: build.rs  check.rs  mod.rs  test.rs
