[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85.0"
authors = ["Carlos Eduardo Ferreyra <eduferreyraok@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/carlosferreyra/korvex"
homepage = "https://github.com/carlosferreyra/korvex"
description = "Generate idiomatic language bindings from annotated Rust code."

[profile.release]
lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
