[package]
name = "korvex-cli"
description = "Command-line interface for scaffolding projects and generating bindings with Korvex."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "korvex_cli"

[dependencies]
korvex = { path = "../korvex" }
