[package]
name = "korvex-core"
description = "Core binding engine — IR processing and adapter dispatch."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
korvex-types = { path = "../korvex-types" }
korvex-adapter = { path = "../korvex-adapter" }
