[package]
name = "korvex-macros"
description = "Procedural macros for annotating Rust types and functions for binding generation."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
korvex-types = { path = "../korvex-types" }
