[package]
name = "korvex-node"
description = "Node.js adapter — emits napi-rs-based bindings from the Korvex IR."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
korvex-adapter = { path = "../korvex-adapter" }
