[package]
name = "korvex-python"
description = "Python adapter — emits pyo3-based bindings from the Korvex IR."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
korvex-adapter = { path = "../korvex-adapter" }
