[package]
name = "korvex-wasi"
description = "WASI adapter — emits WIT interfaces and wasm component model glue from the Korvex IR."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
korvex-adapter = { path = "../korvex-adapter" }
