[package]
name = "korvex"
description = "Core SDK library — the main entry point for the Korvex binding engine."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
korvex-types = { path = "../korvex-types" }
korvex-core = { path = "../korvex-core" }
korvex-macros = { path = "../korvex-macros" }
korvex-adapter = { path = "../korvex-adapter" }
